Remove `code { white-space: nowrap }` to fix mobile rendering

--- a/themes/terminimal/sass/main.scss
+++ b/themes/terminimal/sass/main.scss
@@ -130,7 +130,6 @@ code {
   padding: 2px 4px;
   font-size: .95em;
   border-radius: 6px;
-  white-space: nowrap;
 }
 
 pre {
